lab2/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions_opt instruction
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> RETURN expression ;
Rule 7     instruction -> CONTINUE ;
Rule 8     instruction -> BREAK ;
Rule 9     instruction -> print_statement
Rule 10    instruction -> assignment
Rule 11    instruction -> for_statement
Rule 12    instruction -> while_statement
Rule 13    instruction -> if_statement
Rule 14    instruction -> { instructions }
Rule 15    instruction -> ;
Rule 16    if_statement -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 17    if_statement -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 18    while_statement -> WHILE ( condition ) instruction
Rule 19    for_statement -> FOR ID = range : range instruction
Rule 20    range -> INTNUM
Rule 21    range -> ID
Rule 22    print_statement -> PRINT print_list ;
Rule 23    print_list -> expression
Rule 24    print_list -> print_list , expression
Rule 25    expression -> expression DOTDIV expression  [precedence=left, level=5]
Rule 26    expression -> expression DOTMUL expression  [precedence=left, level=5]
Rule 27    expression -> expression DOTSUB expression  [precedence=left, level=4]
Rule 28    expression -> expression DOTADD expression  [precedence=left, level=4]
Rule 29    expression -> expression / expression  [precedence=left, level=5]
Rule 30    expression -> expression * expression  [precedence=left, level=5]
Rule 31    expression -> expression - expression  [precedence=left, level=4]
Rule 32    expression -> expression + expression  [precedence=left, level=4]
Rule 33    expression -> ( expression )
Rule 34    expression -> expression '  [precedence=nonassoc, level=6]
Rule 35    expression -> [ matrix_rows ]
Rule 36    expression -> - expression  [precedence=left, level=4]
Rule 37    expression -> matrix_access
Rule 38    expression -> matrix_function
Rule 39    expression -> condition
Rule 40    expression -> assignment
Rule 41    expression -> STRING
Rule 42    expression -> ID
Rule 43    expression -> FLOATNUM
Rule 44    expression -> INTNUM
Rule 45    assignment -> variable DIVASSIGN expression ;
Rule 46    assignment -> variable MULASSIGN expression ;
Rule 47    assignment -> variable SUBASSIGN expression ;
Rule 48    assignment -> variable ADDASSIGN expression ;
Rule 49    assignment -> variable = expression ;
Rule 50    variable -> matrix_access
Rule 51    variable -> ID
Rule 52    condition -> expression NE expression  [precedence=nonassoc, level=3]
Rule 53    condition -> expression EQ expression  [precedence=nonassoc, level=3]
Rule 54    condition -> expression GE expression  [precedence=nonassoc, level=3]
Rule 55    condition -> expression LE expression  [precedence=nonassoc, level=3]
Rule 56    condition -> expression > expression  [precedence=nonassoc, level=3]
Rule 57    condition -> expression < expression  [precedence=nonassoc, level=3]
Rule 58    matrix_function -> EYE ( INTNUM )
Rule 59    matrix_function -> ONES ( INTNUM )
Rule 60    matrix_function -> ZEROS ( INTNUM )
Rule 61    matrix_access -> ID [ index_list ]
Rule 62    index_list -> index
Rule 63    index_list -> index_list , index
Rule 64    index -> INTNUM
Rule 65    index -> ID
Rule 66    matrix_rows -> matrix_row
Rule 67    matrix_rows -> matrix_rows , matrix_row
Rule 68    matrix_row -> [ number_list ]
Rule 69    number_list -> signed_number
Rule 70    number_list -> number_list , signed_number
Rule 71    signed_number -> - number  [precedence=left, level=4]
Rule 72    signed_number -> number
Rule 73    number -> INTNUM
Rule 74    number -> FLOATNUM

Terminals, with rules where they appear:

'                    : 34
(                    : 16 17 18 33 58 59 60
)                    : 16 17 18 33 58 59 60
*                    : 30
+                    : 32
,                    : 24 63 67 70
-                    : 31 36 71
/                    : 29
:                    : 19
;                    : 6 7 8 15 22 45 46 47 48 49
<                    : 57
=                    : 19 49
>                    : 56
ADDASSIGN            : 48
BREAK                : 8
CONTINUE             : 7
DIVASSIGN            : 45
DOTADD               : 28
DOTDIV               : 25
DOTMUL               : 26
DOTSUB               : 27
ELSE                 : 17
EQ                   : 53
EYE                  : 58
FLOATNUM             : 43 74
FOR                  : 19
GE                   : 54
ID                   : 19 21 42 51 61 65
IF                   : 16 17
INTNUM               : 20 44 58 59 60 64 73
LE                   : 55
MULASSIGN            : 46
NE                   : 52
ONES                 : 59
PRINT                : 22
RETURN               : 6
STRING               : 41
SUBASSIGN            : 47
WHILE                : 18
ZEROS                : 60
[                    : 35 61 68
]                    : 35 61 68
error                : 
{                    : 14
}                    : 14

Nonterminals, with rules where they appear:

assignment           : 10 40
condition            : 16 17 18 39
expression           : 6 23 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 36 45 46 47 48 49 52 52 53 53 54 54 55 55 56 56 57 57
for_statement        : 11
if_statement         : 13
index                : 62 63
index_list           : 61 63
instruction          : 3 4 5 16 17 17 18 19
instructions         : 5 14
instructions_opt     : 1 3
matrix_access        : 37 50
matrix_function      : 38
matrix_row           : 66 67
matrix_rows          : 35 67
number               : 71 72
number_list          : 68 70
print_list           : 22 24
print_statement      : 9
program              : 0
range                : 19 19
signed_number        : 69 70
variable             : 45 46 47 48 49
while_statement      : 12


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions_opt instruction
    RETURN          reduce using rule 2 (instructions_opt -> .)
    CONTINUE        reduce using rule 2 (instructions_opt -> .)
    BREAK           reduce using rule 2 (instructions_opt -> .)
    {               reduce using rule 2 (instructions_opt -> .)
    ;               reduce using rule 2 (instructions_opt -> .)
    PRINT           reduce using rule 2 (instructions_opt -> .)
    FOR             reduce using rule 2 (instructions_opt -> .)
    WHILE           reduce using rule 2 (instructions_opt -> .)
    IF              reduce using rule 2 (instructions_opt -> .)
    ID              reduce using rule 2 (instructions_opt -> .)
    $end            reduce using rule 2 (instructions_opt -> .)

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    (3) instructions_opt -> instructions_opt . instruction
    (6) instruction -> . RETURN expression ;
    (7) instruction -> . CONTINUE ;
    (8) instruction -> . BREAK ;
    (9) instruction -> . print_statement
    (10) instruction -> . assignment
    (11) instruction -> . for_statement
    (12) instruction -> . while_statement
    (13) instruction -> . if_statement
    (14) instruction -> . { instructions }
    (15) instruction -> . ;
    (22) print_statement -> . PRINT print_list ;
    (45) assignment -> . variable DIVASSIGN expression ;
    (46) assignment -> . variable MULASSIGN expression ;
    (47) assignment -> . variable SUBASSIGN expression ;
    (48) assignment -> . variable ADDASSIGN expression ;
    (49) assignment -> . variable = expression ;
    (19) for_statement -> . FOR ID = range : range instruction
    (18) while_statement -> . WHILE ( condition ) instruction
    (16) if_statement -> . IF ( condition ) instruction
    (17) if_statement -> . IF ( condition ) instruction ELSE instruction
    (50) variable -> . matrix_access
    (51) variable -> . ID
    (61) matrix_access -> . ID [ index_list ]
    $end            reduce using rule 1 (program -> instructions_opt .)
    RETURN          shift and go to state 4
    CONTINUE        shift and go to state 6
    BREAK           shift and go to state 7
    {               shift and go to state 13
    ;               shift and go to state 5
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    instruction                    shift and go to state 3
    print_statement                shift and go to state 8
    assignment                     shift and go to state 9
    for_statement                  shift and go to state 10
    while_statement                shift and go to state 11
    if_statement                   shift and go to state 12
    variable                       shift and go to state 15
    matrix_access                  shift and go to state 20

state 3

    (3) instructions_opt -> instructions_opt instruction .
    RETURN          reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    CONTINUE        reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    BREAK           reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    {               reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    ;               reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    PRINT           reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    FOR             reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    WHILE           reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    IF              reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    ID              reduce using rule 3 (instructions_opt -> instructions_opt instruction .)
    $end            reduce using rule 3 (instructions_opt -> instructions_opt instruction .)


state 4

    (6) instruction -> RETURN . expression ;
    (25) expression -> . expression DOTDIV expression
    (26) expression -> . expression DOTMUL expression
    (27) expression -> . expression DOTSUB expression
    (28) expression -> . expression DOTADD expression
    (29) expression -> . expression / expression
    (30) expression -> . expression * expression
    (31) expression -> . expression - expression
    (32) expression -> . expression + expression
    (33) expression -> . ( expression )
    (34) expression -> . expression '
    (35) expression -> . [ matrix_rows ]
    (36) expression -> . - expression
    (37) expression -> . matrix_access
    (38) expression -> . matrix_function
    (39) expression -> . condition
    (40) expression -> . assignment
    (41) expression -> . STRING
    (42) expression -> . ID
    (43) expression -> . FLOATNUM
    (44) expression -> . INTNUM
    (61) matrix_access -> . ID [ index_list ]
    (58) matrix_function -> . EYE ( INTNUM )
    (59) matrix_function -> . ONES ( INTNUM )
    (60) matrix_function -> . ZEROS ( INTNUM )
    (52) condition -> . expression NE expression
    (53) condition -> . expression EQ expression
    (54) condition -> . expression GE expression
    (55) condition -> . expression LE expression
    (56) condition -> . expression > expression
    (57) condition -> . expression < expression
    (45) assignment -> . variable DIVASSIGN expression ;
    (46) assignment -> . variable MULASSIGN expression ;
    (47) assignment -> . variable SUBASSIGN expression ;
    (48) assignment -> . variable ADDASSIGN expression ;
    (49) assignment -> . variable = expression ;
    (50) variable -> . matrix_access
    (51) variable -> . ID
    (               shift and go to state 23
    [               shift and go to state 24
    -               shift and go to state 22
    STRING          shift and go to state 29
    ID              shift and go to state 30
    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    EYE             shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 35

    expression                     shift and go to state 21
    matrix_access                  shift and go to state 25
    matrix_function                shift and go to state 26
    condition                      shift and go to state 27
    assignment                     shift and go to state 28
    variable                       shift and go to state 15

state 5

    (15) instruction -> ; .
    RETURN          reduce using rule 15 (instruction -> ; .)
    CONTINUE        reduce using rule 15 (instruction -> ; .)
    BREAK           reduce using rule 15 (instruction -> ; .)
    {               reduce using rule 15 (instruction -> ; .)
    ;               reduce using rule 15 (instruction -> ; .)
    PRINT           reduce using rule 15 (instruction -> ; .)
    FOR             reduce using rule 15 (instruction -> ; .)
    WHILE           reduce using rule 15 (instruction -> ; .)
    IF              reduce using rule 15 (instruction -> ; .)
    ID              reduce using rule 15 (instruction -> ; .)
    $end            reduce using rule 15 (instruction -> ; .)
    }               reduce using rule 15 (instruction -> ; .)
    ELSE            reduce using rule 15 (instruction -> ; .)


state 6

    (7) instruction -> CONTINUE . ;
    ;               shift and go to state 36


state 7

    (8) instruction -> BREAK . ;
    ;               shift and go to state 37


state 8

    (9) instruction -> print_statement .
    RETURN          reduce using rule 9 (instruction -> print_statement .)
    CONTINUE        reduce using rule 9 (instruction -> print_statement .)
    BREAK           reduce using rule 9 (instruction -> print_statement .)
    {               reduce using rule 9 (instruction -> print_statement .)
    ;               reduce using rule 9 (instruction -> print_statement .)
    PRINT           reduce using rule 9 (instruction -> print_statement .)
    FOR             reduce using rule 9 (instruction -> print_statement .)
    WHILE           reduce using rule 9 (instruction -> print_statement .)
    IF              reduce using rule 9 (instruction -> print_statement .)
    ID              reduce using rule 9 (instruction -> print_statement .)
    $end            reduce using rule 9 (instruction -> print_statement .)
    }               reduce using rule 9 (instruction -> print_statement .)
    ELSE            reduce using rule 9 (instruction -> print_statement .)


state 9

    (10) instruction -> assignment .
    RETURN          reduce using rule 10 (instruction -> assignment .)
    CONTINUE        reduce using rule 10 (instruction -> assignment .)
    BREAK           reduce using rule 10 (instruction -> assignment .)
    {               reduce using rule 10 (instruction -> assignment .)
    ;               reduce using rule 10 (instruction -> assignment .)
    PRINT           reduce using rule 10 (instruction -> assignment .)
    FOR             reduce using rule 10 (instruction -> assignment .)
    WHILE           reduce using rule 10 (instruction -> assignment .)
    IF              reduce using rule 10 (instruction -> assignment .)
    ID              reduce using rule 10 (instruction -> assignment .)
    $end            reduce using rule 10 (instruction -> assignment .)
    }               reduce using rule 10 (instruction -> assignment .)
    ELSE            reduce using rule 10 (instruction -> assignment .)


state 10

    (11) instruction -> for_statement .
    RETURN          reduce using rule 11 (instruction -> for_statement .)
    CONTINUE        reduce using rule 11 (instruction -> for_statement .)
    BREAK           reduce using rule 11 (instruction -> for_statement .)
    {               reduce using rule 11 (instruction -> for_statement .)
    ;               reduce using rule 11 (instruction -> for_statement .)
    PRINT           reduce using rule 11 (instruction -> for_statement .)
    FOR             reduce using rule 11 (instruction -> for_statement .)
    WHILE           reduce using rule 11 (instruction -> for_statement .)
    IF              reduce using rule 11 (instruction -> for_statement .)
    ID              reduce using rule 11 (instruction -> for_statement .)
    $end            reduce using rule 11 (instruction -> for_statement .)
    }               reduce using rule 11 (instruction -> for_statement .)
    ELSE            reduce using rule 11 (instruction -> for_statement .)


state 11

    (12) instruction -> while_statement .
    RETURN          reduce using rule 12 (instruction -> while_statement .)
    CONTINUE        reduce using rule 12 (instruction -> while_statement .)
    BREAK           reduce using rule 12 (instruction -> while_statement .)
    {               reduce using rule 12 (instruction -> while_statement .)
    ;               reduce using rule 12 (instruction -> while_statement .)
    PRINT           reduce using rule 12 (instruction -> while_statement .)
    FOR             reduce using rule 12 (instruction -> while_statement .)
    WHILE           reduce using rule 12 (instruction -> while_statement .)
    IF              reduce using rule 12 (instruction -> while_statement .)
    ID              reduce using rule 12 (instruction -> while_statement .)
    $end            reduce using rule 12 (instruction -> while_statement .)
    }               reduce using rule 12 (instruction -> while_statement .)
    ELSE            reduce using rule 12 (instruction -> while_statement .)


state 12

    (13) instruction -> if_statement .
    RETURN          reduce using rule 13 (instruction -> if_statement .)
    CONTINUE        reduce using rule 13 (instruction -> if_statement .)
    BREAK           reduce using rule 13 (instruction -> if_statement .)
    {               reduce using rule 13 (instruction -> if_statement .)
    ;               reduce using rule 13 (instruction -> if_statement .)
    PRINT           reduce using rule 13 (instruction -> if_statement .)
    FOR             reduce using rule 13 (instruction -> if_statement .)
    WHILE           reduce using rule 13 (instruction -> if_statement .)
    IF              reduce using rule 13 (instruction -> if_statement .)
    ID              reduce using rule 13 (instruction -> if_statement .)
    $end            reduce using rule 13 (instruction -> if_statement .)
    }               reduce using rule 13 (instruction -> if_statement .)
    ELSE            reduce using rule 13 (instruction -> if_statement .)


state 13

    (14) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . RETURN expression ;
    (7) instruction -> . CONTINUE ;
    (8) instruction -> . BREAK ;
    (9) instruction -> . print_statement
    (10) instruction -> . assignment
    (11) instruction -> . for_statement
    (12) instruction -> . while_statement
    (13) instruction -> . if_statement
    (14) instruction -> . { instructions }
    (15) instruction -> . ;
    (22) print_statement -> . PRINT print_list ;
    (45) assignment -> . variable DIVASSIGN expression ;
    (46) assignment -> . variable MULASSIGN expression ;
    (47) assignment -> . variable SUBASSIGN expression ;
    (48) assignment -> . variable ADDASSIGN expression ;
    (49) assignment -> . variable = expression ;
    (19) for_statement -> . FOR ID = range : range instruction
    (18) while_statement -> . WHILE ( condition ) instruction
    (16) if_statement -> . IF ( condition ) instruction
    (17) if_statement -> . IF ( condition ) instruction ELSE instruction
    (50) variable -> . matrix_access
    (51) variable -> . ID
    (61) matrix_access -> . ID [ index_list ]
    RETURN          shift and go to state 4
    CONTINUE        shift and go to state 6
    BREAK           shift and go to state 7
    {               shift and go to state 13
    ;               shift and go to state 5
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    instructions                   shift and go to state 38
    instruction                    shift and go to state 39
    print_statement                shift and go to state 8
    assignment                     shift and go to state 9
    for_statement                  shift and go to state 10
    while_statement                shift and go to state 11
    if_statement                   shift and go to state 12
    variable                       shift and go to state 15
    matrix_access                  shift and go to state 20

state 14

    (22) print_statement -> PRINT . print_list ;
    (23) print_list -> . expression
    (24) print_list -> . print_list , expression
    (25) expression -> . expression DOTDIV expression
    (26) expression -> . expression DOTMUL expression
    (27) expression -> . expression DOTSUB expression
    (28) expression -> . expression DOTADD expression
    (29) expression -> . expression / expression
    (30) expression -> . expression * expression
    (31) expression -> . expression - expression
    (32) expression -> . expression + expression
    (33) expression -> . ( expression )
    (34) expression -> . expression '
    (35) expression -> . [ matrix_rows ]
    (36) expression -> . - expression
    (37) expression -> . matrix_access
    (38) expression -> . matrix_function
    (39) expression -> . condition
    (40) expression -> . assignment
    (41) expression -> . STRING
    (42) expression -> . ID
    (43) expression -> . FLOATNUM
    (44) expression -> . INTNUM
    (61) matrix_access -> . ID [ index_list ]
    (58) matrix_function -> . EYE ( INTNUM )
    (59) matrix_function -> . ONES ( INTNUM )
    (60) matrix_function -> . ZEROS ( INTNUM )
    (52) condition -> . expression NE expression
    (53) condition -> . expression EQ expression
    (54) condition -> . expression GE expression
    (55) condition -> . expression LE expression
    (56) condition -> . expression > expression
    (57) condition -> . expression < expression
    (45) assignment -> . variable DIVASSIGN expression ;
    (46) assignment -> . variable MULASSIGN expression ;
    (47) assignment -> . variable SUBASSIGN expression ;
    (48) assignment -> . variable ADDASSIGN expression ;
    (49) assignment -> . variable = expression ;
    (50) variable -> . matrix_access
    (51) variable -> . ID
    (               shift and go to state 23
    [               shift and go to state 24
    -               shift and go to state 22
    STRING          shift and go to state 29
    ID              shift and go to state 30
    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    EYE             shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 35

    print_list                     shift and go to state 40
    expression                     shift and go to state 41
    matrix_access                  shift and go to state 25
    matrix_function                shift and go to state 26
    condition                      shift and go to state 27
    assignment                     shift and go to state 28
    variable                       shift and go to state 15

state 15

    (45) assignment -> variable . DIVASSIGN expression ;
    (46) assignment -> variable . MULASSIGN expression ;
    (47) assignment -> variable . SUBASSIGN expression ;
    (48) assignment -> variable . ADDASSIGN expression ;
    (49) assignment -> variable . = expression ;
    DIVASSIGN       shift and go to state 42
    MULASSIGN       shift and go to state 43
    SUBASSIGN       shift and go to state 44
    ADDASSIGN       shift and go to state 45
    =               shift and go to state 46


state 16

    (19) for_statement -> FOR . ID = range : range instruction
    ID              shift and go to state 47


state 17

    (51) variable -> ID .
    (61) matrix_access -> ID . [ index_list ]
    DIVASSIGN       reduce using rule 51 (variable -> ID .)
    MULASSIGN       reduce using rule 51 (variable -> ID .)
    SUBASSIGN       reduce using rule 51 (variable -> ID .)
    ADDASSIGN       reduce using rule 51 (variable -> ID .)
    =               reduce using rule 51 (variable -> ID .)
    [               shift and go to state 48


state 18

    (18) while_statement -> WHILE . ( condition ) instruction
    (               shift and go to state 49


state 19

    (16) if_statement -> IF . ( condition ) instruction
    (17) if_statement -> IF . ( condition ) instruction ELSE instruction
    (               shift and go to state 50


state 20

    (50) variable -> matrix_access .
    DIVASSIGN       reduce using rule 50 (variable -> matrix_access .)
    MULASSIGN       reduce using rule 50 (variable -> matrix_access .)
    SUBASSIGN       reduce using rule 50 (variable -> matrix_access .)
    ADDASSIGN       reduce using rule 50 (variable -> matrix_access .)
    =               reduce using rule 50 (variable -> matrix_access .)


state 21

    (6) instruction -> RETURN expression . ;
    (25) expression -> expression . DOTDIV expression
    (26) expression -> expression . DOTMUL expression
    (27) expression -> expression . DOTSUB expression
    (28) expression -> expression . DOTADD expression
    (29) expression -> expression . / expression
    (30) expression -> expression . * expression
    (31) expression -> expression . - expression
    (32) expression -> expression . + expression
    (34) expression -> expression . '
    (52) condition -> expression . NE expression
    (53) condition -> expression . EQ expression
    (54) condition -> expression . GE expression
    (55) condition -> expression . LE expression
    (56) condition -> expression . > expression
    (57) condition -> expression . < expression
    ;               shift and go to state 51
    DOTDIV          shift and go to state 52
    DOTMUL          shift and go to state 53
    DOTSUB          shift and go to state 54
    DOTADD          shift and go to state 55
    /               shift and go to state 56
    *               shift and go to state 57
    -               shift and go to state 58
    +               shift and go to state 59
    '               shift and go to state 60
    NE              shift and go to state 61
    EQ              shift and go to state 62
    GE              shift and go to state 63
    LE              shift and go to state 64
    >               shift and go to state 65
    <               shift and go to state 66


state 22

    (36) expression -> - . expression
    (25) expression -> . expression DOTDIV expression
    (26) expression -> . expression DOTMUL expression
    (27) expression -> . expression DOTSUB expression
    (28) expression -> . expression DOTADD expression
    (29) expression -> . expression / expression
    (30) expression -> . expression * expression
    (31) expression -> . expression - expression
    (32) expression -> . expression + expression
    (33) expression -> . ( expression )
    (34) expression -> . expression '
    (35) expression -> . [ matrix_rows ]
    (36) expression -> . - expression
    (37) expression -> . matrix_access
    (38) expression -> . matrix_function
    (39) expression -> . condition
    (40) expression -> . assignment
    (41) expression -> . STRING
    (42) expression -> . ID
    (43) expression -> . FLOATNUM
    (44) expression -> . INTNUM
    (61) matrix_access -> . ID [ index_list ]
    (58) matrix_function -> . EYE ( INTNUM )
    (59) matrix_function -> . ONES ( INTNUM )
    (60) matrix_function -> . ZEROS ( INTNUM )
    (52) condition -> . expression NE expression
    (53) condition -> . expression EQ expression
    (54) condition -> . expression GE expression
    (55) condition -> . expression LE expression
    (56) condition -> . expression > expression
    (57) condition -> . expression < expression
    (45) assignment -> . variable DIVASSIGN expression ;
    (46) assignment -> . variable MULASSIGN expression ;
    (47) assignment -> . variable SUBASSIGN expression ;
    (48) assignment -> . variable ADDASSIGN expression ;
    (49) assignment -> . variable = expression ;
    (50) variable -> . matrix_access
    (51) variable -> . ID
    (               shift and go to state 23
    [               shift and go to state 24
    -               shift and go to state 22
    STRING          shift and go to state 29
    ID              shift and go to state 30
    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    EYE             shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 35

    expression                     shift and go to state 67
    matrix_access                  shift and go to state 25
    matrix_function                shift and go to state 26
    condition                      shift and go to state 27
    assignment                     shift and go to state 28
    variable                       shift and go to state 15

state 23

    (33) expression -> ( . expression )
    (25) expression -> . expression DOTDIV expression
    (26) expression -> . expression DOTMUL expression
    (27) expression -> . expression DOTSUB expression
    (28) expression -> . expression DOTADD expression
    (29) expression -> . expression / expression
    (30) expression -> . expression * expression
    (31) expression -> . expression - expression
    (32) expression -> . expression + expression
    (33) expression -> . ( expression )
    (34) expression -> . expression '
    (35) expression -> . [ matrix_rows ]
    (36) expression -> . - expression
    (37) expression -> . matrix_access
    (38) expression -> . matrix_function
    (39) expression -> . condition
    (40) expression -> . assignment
    (41) expression -> . STRING
    (42) expression -> . ID
    (43) expression -> . FLOATNUM
    (44) expression -> . INTNUM
    (61) matrix_access -> . ID [ index_list ]
    (58) matrix_function -> . EYE ( INTNUM )
    (59) matrix_function -> . ONES ( INTNUM )
    (60) matrix_function -> . ZEROS ( INTNUM )
    (52) condition -> . expression NE expression
    (53) condition -> . expression EQ expression
    (54) condition -> . expression GE expression
    (55) condition -> . expression LE expression
    (56) condition -> . expression > expression
    (57) condition -> . expression < expression
    (45) assignment -> . variable DIVASSIGN expression ;
    (46) assignment -> . variable MULASSIGN expression ;
    (47) assignment -> . variable SUBASSIGN expression ;
    (48) assignment -> . variable ADDASSIGN expression ;
    (49) assignment -> . variable = expression ;
    (50) variable -> . matrix_access
    (51) variable -> . ID
    (               shift and go to state 23
    [               shift and go to state 24
    -               shift and go to state 22
    STRING          shift and go to state 29
    ID              shift and go to state 30
    FLOATNUM        shift and go to state 31
    INTNUM          shift and go to state 32
    EYE             shift and go to state 33
    ONES            shift and go to state 34
    ZEROS           shift and go to state 35

    expression                     shift and go to state 68
    matrix_access                  shift and go to state 25
    matrix_function                shift and go to state 26
    condition                      shift and go to state 27
    assignment                     shift and go to state 28
    variable                       shift and go to state 15

state 24

    (35) expression -> [ . matrix_rows ]
    (66) matrix_rows -> . matrix_row
    (67) matrix_rows -> . matrix_rows , matrix_row
    (68) matrix_row -> . [ number_list ]
    [               shift and go to state 69

    matrix_rows                    shift and go to state 70
    matrix_row                     shift and go to state 71

state 25

    (37) expression -> matrix_access .
    (50) variable -> matrix_access .
    ;               reduce using rule 37 (expression -> matrix_access .)
    DOTDIV          reduce using rule 37 (expression -> matrix_access .)
    DOTMUL          reduce using rule 37 (expression -> matrix_access .)
    DOTSUB          reduce using rule 37 (expression -> matrix_access .)
    DOTADD          reduce using rule 37 (expression -> matrix_access .)
    /               reduce using rule 37 (expression -> matrix_access .)
    *               reduce using rule 37 (expression -> matrix_access .)
    -               reduce using rule 37 (expression -> matrix_access .)
    +               reduce using rule 37 (expression -> matrix_access .)
    '               reduce using rule 37 (expression -> matrix_access .)
    NE              reduce using rule 37 (expression -> matrix_access .)
    EQ              reduce using rule 37 (expression -> matrix_access .)
    GE              reduce using rule 37 (expression -> matrix_access .)
    LE              reduce using rule 37 (expression -> matrix_access .)
    >               reduce using rule 37 (expression -> matrix_access .)
    <               reduce using rule 37 (expression -> matrix_access .)
    ,               reduce using rule 37 (expression -> matrix_access .)
    )               reduce using rule 37 (expression -> matrix_access .)
    DIVASSIGN       reduce using rule 50 (variable -> matrix_access .)
    MULASSIGN       reduce using rule 50 (variable -> matrix_access .)
    SUBASSIGN       reduce using rule 50 (variable -> matrix_access .)
    ADDASSIGN       reduce using rule 50 (variable -> matrix_access .)
    =               reduce using rule 50 (variable -> matrix_access .)


state 26

    (38) expression -> matrix_function .
    ;               reduce using rule 38 (expression -> matrix_function .)
    DOTDIV          reduce using rule 38 (expression -> matrix_function .)
    DOTMUL          reduce using rule 38 (expression -> matrix_function .)
    DOTSUB          reduce using rule 38 (expression -> matrix_function .)
    DOTADD          reduce using rule 38 (expression -> matrix_function .)
    /               reduce using rule 38 (expression -> matrix_function .)
    *               reduce using rule 38 (expression -> matrix_function .)
    -               reduce using rule 38 (expression -> matrix_function .)
    +               reduce using rule 38 (expression -> matrix_function .)
    '               reduce using rule 38 (expression -> matrix_function .)
    NE              reduce using rule 38 (expression -> matrix_function .)
    EQ              reduce using rule 38 (expression -> matrix_function .)
    GE              reduce using rule 38 (expression -> matrix_function .)
    LE              reduce using rule 38 (expression -> matrix_function .)
    >               reduce using rule 38 (expression -> matrix_function .)
    <               reduce using rule 38 (expression -> matrix_function .)
    ,               reduce using rule 38 (expression -> matrix_function .)
    )               reduce using rule 38 (expression -> matrix_function .)


state 27

    (39) expression -> condition .
    ;               reduce using rule 39 (expression -> condition .)
    DOTDIV          reduce using rule 39 (expression -> condition .)
    DOTMUL          reduce using rule 39 (expression -> condition .)
    DOTSUB          reduce using rule 39 (expression -> condition .)
    DOTADD          reduce using rule 39 (expression -> condition .)
    /               reduce using rule 39 (expression -> condition .)
    *               reduce using rule 39 (expression -> condition .)
    -               reduce using rule 39 (expression -> condition .)
    +               reduce using rule 39 (expression -> condition .)
    '               reduce using rule 39 (expression -> condition .)
    NE              reduce using rule 39 (expression -> condition .)
    EQ              reduce using rule 39 (expression -> condition .)
    GE              reduce using rule 39 (expression -> condition .)
    LE              reduce using rule 39 (expression -> condition .)
    >               reduce using rule 39 (expression -> condition .)
    <               reduce using rule 39 (expression -> condition .)
    ,               reduce using rule 39 (expression -> condition .)
    )               reduce using rule 39 (expression -> condition .)


state 28

    (40) expression -> assignment .
    ;               reduce using rule 40 (expression -> assignment .)
    DOTDIV          reduce using rule 40 (expression -> assignment .)
    DOTMUL          reduce using rule 40 (expression -> assignment .)
    DOTSUB          reduce using rule 40 (expression -> assignment .)
    DOTADD          reduce using rule 40 (expression -> assignment .)
    /               reduce using rule 40 (expression -> assignment .)
    *               reduce using rule 40 (expression -> assignment .)
    -               reduce using rule 40 (expression -> assignment .)
    +               reduce using rule 40 (expression -> assignment .)
    '               reduce using rule 40 (expression -> assignment .)
    NE              reduce using rule 40 (expression -> assignment .)
    EQ              reduce using rule 40 (expression -> assignment .)
    GE              reduce using rule 40 (expression -> assignment .)
    LE              reduce using rule 40 (expression -> assignment .)
    >               reduce using rule 40 (expression -> assignment .)
    <               reduce using rule 40 (expression -> assignment .)
    ,               reduce using rule 40 (expression -> assignment .)
    )               reduce using rule 40 (expression -> assignment .)


state 29
